First commited as before_62457_rev2

--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -225,31 +225,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
+					<and>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
 						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+					</and>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -259,31 +254,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
+
+					<and>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isFeature">
 							</test>
 						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isFeature">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+					</and>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -293,31 +284,29 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<instanceof
+								value="org.eclipse.jgit.revwalk.RevCommit">
+						</instanceof>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
+					<and>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
 						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+					</and>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -327,31 +316,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
+					<and>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isRelease">
 							</test>
 						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isRelease">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+					</and>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -365,8 +349,8 @@
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isFeature">
@@ -375,27 +359,18 @@
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isFeature">
-								</test>
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.hasDefaultRemote">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -408,8 +383,8 @@
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isRelease">
@@ -418,27 +393,18 @@
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isRelease">
-								</test>
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.hasDefaultRemote">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -451,8 +417,8 @@
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isHotfix">
@@ -461,27 +427,18 @@
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isHotfix">
-								</test>
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.hasDefaultRemote">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -490,31 +447,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureTrackHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.hasDefaultRemote">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -524,31 +476,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureCheckoutHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
+					<and>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
 						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+					</and>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -558,31 +505,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureRebaseHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isFeature">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isFeature">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -592,31 +534,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -626,31 +563,26 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<or>
-						<adapt type="org.eclipse.jgit.lib.Repository">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isHotfix">
 							</test>
-						</adapt>
-						<adapt
-								type="org.eclipse.core.resources.IResource">
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isHotfix">
-								</test>
-							</adapt>
-						</adapt>
-					</or>
+						</and>
+					</adapt>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -671,26 +603,12 @@
 		<definition
 				id="org.eclipse.egit.gitflow.ui.commandEnabled">
 			<or>
-				<reference
-						definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
-				</reference>
-				<and>
-					<count
-							value="1">
-					</count>
-					<iterate>
-						<and>
-							<instanceof
-									value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
-							</instanceof>
-							<not>
-								<test
-										property="GitRepository.isBare">
-								</test>
-							</not>
-						</and>
-					</iterate>
-				</and>
+				<instanceof
+						value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
+				</instanceof>
+				<instanceof
+						value="org.eclipse.core.resources.IResource">
+				</instanceof>
 			</or>
 		</definition>
 	</extension>
@@ -708,13 +626,7 @@
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
 		</factory>
 	</extension>
-	<extension
-			point="org.eclipse.core.runtime.adapters">
-		<factory adaptableType="org.eclipse.jface.viewers.ISelection"
-				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
-			<adapter type="org.eclipse.jgit.lib.Repository"/>
-		</factory>
-	</extension>
+
 
 	<extension
 			point="org.eclipse.ui.menus">
@@ -725,24 +637,20 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<iterate>
-						<or>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<instanceof
+									value="org.eclipse.core.resources.IProject">
+							</instanceof>
 							<adapt type="org.eclipse.jgit.lib.Repository">
 								<test
 										forcePluginActivation="true"
 										property="GitFlowRepository.isInitialized">
 								</test>
 							</adapt>
-							<adapt
-									type="org.eclipse.core.resources.IResource">
-								<adapt type="org.eclipse.jgit.lib.Repository">
-									<test
-											forcePluginActivation="true"
-											property="GitFlowRepository.isInitialized">
-									</test>
-								</adapt>
-							</adapt>
-						</or>
+						</and>
 					</iterate>
 				</visibleWhen>
 				<command
