First commited as before_62457_rev4

--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -22,15 +22,20 @@
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
-					<and>
-					    <reference definitionId="org.eclipse.egit.gitflow.ui.commandEnabled" />
-						<not>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</not>
-					</and>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<not>
+								<adapt type="org.eclipse.jgit.lib.Repository">
+									<test
+											forcePluginActivation="true"
+											property="GitFlowRepository.isInitialized">
+									</test>
+								</adapt>
+							</not>
+						</and>
+					</iterate>
 				</visibleWhen>
 			</command>
 		</menuContribution>
@@ -41,10 +46,18 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isInitialized">
-					</test>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</and>
+					</iterate>
 				</visibleWhen>
 				<command
 						commandId="org.eclipse.egit.gitflow.ui.command.featureStart"
@@ -181,10 +194,30 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.InitHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
+			<enabledWhen>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<not>
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</not>
+					</and>
+				</iterate>
+			</enabledWhen>
 		</handler>
 		<handler
 				commandId="org.eclipse.egit.gitflow.ui.command.featureStart">
@@ -192,15 +225,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
-			<enabledWhen>				
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isInitialized">
-				</test>
+			<enabledWhen>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -209,15 +254,28 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isFeature">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isFeature">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -226,15 +284,30 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<instanceof
+								value="org.eclipse.jgit.revwalk.RevCommit">
+						</instanceof>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isInitialized">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -243,15 +316,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isRelease">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isRelease">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -261,21 +346,31 @@
 			</class>
 
 			<enabledWhen>
-				<and>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isFeature">
-					</test>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.hasDefaultRemote">
-					</test>
-				</and>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isFeature">
+							</test>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -285,21 +380,31 @@
 			</class>
 
 			<enabledWhen>
-				<and>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isRelease">
-					</test>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.hasDefaultRemote">
-					</test>
-				</and>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isRelease">
+							</test>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -309,21 +414,31 @@
 			</class>
 
 			<enabledWhen>
-				<and>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isHotfix">
-					</test>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.hasDefaultRemote">
-					</test>
-				</and>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isHotfix">
+							</test>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -332,15 +447,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureTrackHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.hasDefaultRemote">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -349,15 +476,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureCheckoutHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isInitialized">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -366,15 +505,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureRebaseHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isFeature">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isFeature">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -383,15 +534,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isInitialized">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -400,15 +563,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<test
-						forcePluginActivation="true"
-						property="GitFlowRepository.isHotfix">
-				</test>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isHotfix">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 	</extension>
@@ -419,7 +594,7 @@
 				id="org.eclipse.egit.gitflow.ui.propertyTester"
 				namespace="GitFlowRepository"
 				properties="isFeature,isRelease,isHotfix,isDevelop,isMaster,isInitialized,hasDefaultRemote"
-				type="java.util.Collection">
+				type="org.eclipse.jgit.lib.Repository">
 		</propertyTester>
 	</extension>
 
@@ -428,26 +603,12 @@
 		<definition
 				id="org.eclipse.egit.gitflow.ui.commandEnabled">
 			<or>
-				<reference
-						definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
-				</reference>
-				<and>
-					<count
-							value="1">
-					</count>
-					<iterate>
-						<and>
-							<instanceof
-									value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
-							</instanceof>
-							<not>
-								<test
-										property="GitRepository.isBare">
-								</test>
-							</not>
-						</and>
-					</iterate>
-				</and>
+				<instanceof
+						value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
+				</instanceof>
+				<instanceof
+						value="org.eclipse.core.resources.IResource">
+				</instanceof>
 			</or>
 		</definition>
 	</extension>
@@ -465,13 +626,7 @@
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
 		</factory>
 	</extension>
-	<extension
-			point="org.eclipse.core.runtime.adapters">
-		<factory adaptableType="org.eclipse.jface.viewers.ISelection"
-				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
-			<adapter type="org.eclipse.jgit.lib.Repository"/>
-		</factory>
-	</extension>
+
 
 	<extension
 			point="org.eclipse.ui.menus">
@@ -482,10 +637,21 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isInitialized">
-					</test>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<instanceof
+									value="org.eclipse.core.resources.IProject">
+							</instanceof>
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</and>
+					</iterate>
 				</visibleWhen>
 				<command
 						commandId="org.eclipse.egit.gitflow.ui.command.featureStart"
@@ -566,15 +732,23 @@
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
-					<and>
-					    <reference definitionId="org.eclipse.egit.gitflow.ui.commandEnabled" />
-						<not>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</not>
-					</and>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<instanceof
+									value="org.eclipse.core.resources.IProject">
+							</instanceof>
+							<not>
+								<adapt type="org.eclipse.jgit.lib.Repository">
+									<test
+											forcePluginActivation="true"
+											property="GitFlowRepository.isInitialized">
+									</test>
+								</adapt>
+							</not>
+						</and>
+					</iterate>
 				</visibleWhen>
 			</command>
 		</menuContribution>
